# Spotipy-Connect

./: .gitmodules  Cargo.toml  README.md
src/: main.rs  ui.glade  ui.glade~
